phone/www/css/teacher.css
body, html {
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	word-wrap: break-word;
}

.exer {
	font-family: jennasue;
	font-size: 1.5em;
}

.click {
	font-family: archistico;
	font-size: 1em;
}

.ehuFontStyle {
	font-family: ehuFont;
}

a:link { /* unvisited link */
	color: #000;
	text-decoration: none;
} 

a:visited { /* visited link */
	color: #000;
	text-decoration: none;
} 

a:hover { /* mouse over link */
	color: #000;
	text-decoration: none;
} 

a:active { /* selected link */
	color: #000;
	text-decoration: none;
}

button {
	width: 100%;
}

checkbox {
	padding-left: 1em;
}

#container {
	min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto;
	bottom: 0px;
	background-color: #FFF;
	margin-bottom: -5.5em;
	z-index: 900;
}

#header {
	height: 2em;
	border-bottom: 1px groove #000;
	font-size: 1.5em;
	background: #F2F2F2;
	background: -webkit-linear-gradient(#F2F2F2, #D8D8D8); /* For Safari 5.1 to 6.0 */
	background: -o-linear-gradient(#F2F2F2, #D8D8D8); /* For Opera 11.1 to 12.0 */
	background: -moz-linear-gradient(#F2F2F2, #D8D8D8); /* For Firefox 3.6 to 15 */
	background: linear-gradient(#F2F2F2, #D8D8D8); /* Standard syntax */
	z-index: 200000;
	font-weight: bold;
	line-height: 1.8em; /* vertically centers the content */
}

.userName {
	font-family: amatic;
	top: 0.4em;
	right: 0.4em;
}

#subheader {
	height: 1em;

	background: #FFF;
	background: -webkit-linear-gradient(#E6E6E6, #FFF); /* For Safari 5.1 to 6.0 */
	background: -o-linear-gradient(#E6E6E6, #FFF); /* For Opera 11.1 to 12.0 */
	background: -moz-linear-gradient(#E6E6E6, #FFF); /* For Firefox 3.6 to 15 */
	background: linear-gradient(#E6E6E6, #FFF); /* Standard syntax */
	
	border-radius: 30px 30px 0px 0px;
	
	content: "";
}

.blackboard {
	background-image: url("../images/blackboard.jpg");
	background-repeat: repeat;
}

.title {
	font-size: 1em;
	text-transform: uppercase;
	font-weight: bold;
}

#main {
	color: #000;
	z-index: 10;
}

#state-buttons {
	height: 3em;
	font-family: ehuFont;
}

#exercises-container {
	position: relative;	
	overflow: hidden;
	overflow-y: hidden;
	font-family: ehuSans;
}

#exercises-content {
	overflow-x: hidden;
}


#overfooter {
	display: block;
	position: relative;
	height: 2.5em;
	background: #E6E6E6;
	background: -webkit-linear-gradient(#E6E6E6, #D8D8D8); /* For Safari 5.1 to 6.0 */
	background: -o-linear-gradient(#E6E6E6, #D8D8D8); /* For Opera 11.1 to 12.0 */
	background: -moz-linear-gradient(#E6E6E6, #D8D8D8); /* For Firefox 3.6 to 15 */
	background: linear-gradient(#E6E6E6, #D8D8D8); /* Standard syntax */
	border-top: 1px groove #A4A4A4;
	border-bottom: 1px groove #D8D8D8;
	padding-top: 0.3em;
	z-index: 10011;
}

#footer {
	display: block;
	position: relative;
	height: 3em;
	bottom: 0px;
	line-height: 2em;
	background: #2E2E2E;
	background: -webkit-linear-gradient(#6E6E6E, #2E2E2E); /* For Safari 5.1 to 6.0 */
	background: -o-linear-gradient(#6E6E6E, #2E2E2E); /* For Opera 11.1 to 12.0 */
	background: -moz-linear-gradient(#6E6E6E, #2E2E2E); /* For Firefox 3.6 to 15 */
	background: linear-gradient(#6E6E6E, #2E2E2E); /* Standard syntax */
	border-top: 1px solid rgba(255, 255, 255, 0.5);
	color: #FFF;
	font-weight: bold;
	z-index: 10010;
	font-family: ehuSans;
}

.progress {
	position: fixed;
	left: 1em;
	right: 1em;
	bottom: -0.6em;
}

.darken {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	background-color: #000;
	opacity: 0.5;
	z-index: 9999;
}

.top-shadow {
	-webkit-box-shadow: 0px -8px 5px -5px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px -8px 5px -5px rgba(0,0,0,0.75);
	box-shadow: 0px -8px 5px -5px rgba(0,0,0,0.75);
}

#new-exercise {
	position: absolute;
	width: 100%;
	min-height: 1px;
	padding-top: 1.7em;
	background-image: url("../images/blackboard.jpg");
	background-repeat: repeat;
	border: 1px solid #A4A4A4;
	border-radius: 15px 15px 0px 0px;
	color: #FFF;
	z-index: 10000;
	bottom: 5em;
}

.tab-title  {
	padding-bottom: 1em;
	font-family: ehuFont;
}

.campos {
	position: relative;
	background-color: #FFF;
	padding: 1em;
	color: #000;
}

.advanced-container {
	position: relative;
	overflow-y: hidden;
	overflow-x: hidden; 
}

.advanced-content {	
	position: relative;
	padding-top: 0.5em;
	overflow-y: scroll;
	overflow-x: hidden; 
}

.clear {
	clear: both;
}

.separator {
	height: 3px;
	background-color: #A4A4A4;
}

.extraMargin {
	display: block;
	height: 0px;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
	content: "";
}

.padd {
	padding: 0.5em;
}

.padd3 {
	padding: 0.3em;
}

.bottompadd {
	padding-bottom: 0.5em;
}

.toppadd {
	padding-top: 0.5em;
}

.white {
	color: #FFF;
}

.ellipsis {
	overflow: hidden;
	text-overflow: ellipsis;
	-o-text-overflow: ellipsis;
	white-space: nowrap;
}

.shadowed {
	text-shadow: 3px 1px 1px #000;
}

.bold {
	font-weight: bold;
}

.border {
	border: 1px solid #A4A4A4;
}

.exercise {
	width: 100%;
	
	border: 1px solid #dddddd;
	border-radius: 5px;
	
	margin-top: 0.5em;
	
	color: #000;
	
	overflow: hidden;
}

.exercise-container {
	height: 100%;
	
	background: #FFF;
}

.exercise-name {
	width: 100%;
	background: #FFF;
	padding-top: 0.5em;
}

.exercise-name-icons {
	font-size: 0.8em;
	
	padding: 0.5em 0em 0.8em 0em;
}

.exercise-buttons {	
	background: #FFF;	
	text-align: right;	
	padding-top: 0.8em;
}

.exercise-buttons-icons {
	font-size: 1.5em;
}

#exercise-details {
	position: absolute;
	width: 100%;
	padding-top: 1.7em;
	background-image: url("../images/blackboard.jpg");
	background-repeat: repeat;
	border: 1px solid #A4A4A4;
	border-radius: 15px 15px 0px 0px;
	color: #FFF;
	z-index: 10000;
	font-family: ehuSans;
}

.exercise-details-body {
	background-color: #FFF;
	padding: 1.5em;
	color: #000;
	height: 100%;
}

.exercise-details-title {
	display: block;
	background: #A9BCF5;
	padding: 0.2em;
	border-radius: 5px;
	font-weight: bold;
	background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1)), url("../images/blackboard.jpg") repeat;
	margin-bottom: 0.5em;
	font-size: 1.2em;
	color: #FFF;
	font-family: ehuFont;
	border-left: 2px solid #000;
}

.exercise-detail {
	padding: 0.2em;
	margin-bottom: 0.5em;
}

#statistics {
	position: absolute;
	width: 100%;
	padding-top: 1.7em;
	background-image: url("../images/blackboard.jpg");
	background-repeat: repeat;
	border: 1px solid #A4A4A4;
	border-radius: 15px 15px 0px 0px;
	color: #FFF;
	z-index: 10000;
}

.marginRight {
	margin-right: 1em;
}

.marginLeft {
	margin-left: 1em;
}

#statistics-buttons {
	display: block;
	background: #FFF;
}

.statistics-question-buttons {
	margin-top: 1em;
	padding: 0.5em;fpa
	border-radius: 5px;
	background-color: #E6E6E6;
}

.filter {
	margin: 0;
}

.statistics-body {
	background-color: #FFF;
	padding: 1.5em;
	color: #000;
	height: 100%;
}

.statistics-body-a {
	padding-top: 1em;
	padding-left: 1em;
	padding-right: 1em;
	border-radius: 0 0 5px 5px;
}

.statistics-search {
	margin-top: 0.2em;
	margin-bottom: 0.2em;
	padding: 0.3em;
	background-color: #D8D8D8;
	border-radius: 5px;
}

.statistics-list-container {
	position: relative;	
	overflow-y: hidden;
	overflow: hidden;
}

.statistics-list-content {
	position: relative;
	overflow-x: hidden;
}

.statistics-student {
	width: 100%;
	border: 1px solid #dddddd;
	padding: 0.5em;
	border-radius: 5px;
	border: 1px solid #BDBDBD;
	margin-top: 0.2em;
}

.statistics-student:first-child {
	margin-top: 0em;
}

.statistics-student-exclamation {
	background-color: #F6CECE;
}

.statistics-student-finished {
	background-color: #A9D0F5;
}

/* EXERCISE TYPES */

.exercise-active {
	border: 1px solid #d9534f;
	border-bottom: 3px solid #d9534f;
}

.exercise-finished {
	border: 1px solid #337ab7;
	border-bottom: 3px solid #337ab7;
}

.exercise-ready {
	border: 1px solid #f0ad4e;
	border-bottom: 3px solid #f0ad4e;
}

.progress-text {
	margin-top: 0.3em;
	margin-bottom: 0.3em;
}

.selected-active-button {
	border-radius: 10px 10px 0px 0px;
	padding: 0.5em;
	background-color: #F6CECE;
}

.selected-ready-button {
	border-radius: 10px 10px 0px 0px;
	padding: 0.5em;
	background-color: #F2F5A9;
}

.selected-finished-button {
	border-radius: 10px 10px 0px 0px;
	padding: 0.5em;
	background-color: #A9D0F5;
}

.no-selected-button {
	padding: 0.5em;
}

.selected-active-exercises {
	padding: 0.5em;
	z-index: 1001;
	background-color: #F6CECE;
	border-radius: 0px 5px 5px 5px;
}

.selected-ready-exercises {
	padding: 0.5em;
	z-index: 1001;
	background-color: #F2F5A9;
	border-radius: 5px 0px 5px 5px;
}

.selected-finished-exercises {
	padding: 0.5em;
	z-index: 1001;
	background-color: #A9D0F5;
	border-radius: 5px;
}

.left {
	float: left;
}

.progress {
	margin: 0px;
	padding: 0px;
}

/* PROFILE */

.profile-title {
	width: 100%;

	margin-top: 1em;
	margin-bottom: 1em;
	padding: 0.5em;
	padding-left: 1em;

	background: #A9BCF5;
	border-radius: 5px;
	font-weight: bold;
	background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1)), url("../images/blackboard.jpg") repeat;
	margin-bottom: 0.5em;
	font-size: 1.2em;
	color: #FFF;
	font-family: ehuFont;
	border-left: 2px solid #000;
}

.profile-title2 {
	width: 100%;

	margin-top: 1em;
	margin-bottom: 1em;
	padding: 0.5em;
	padding-left: 1em;
	border-bottom: 4px solid #BDBDBD;
	background: #F2F2F2;
	
	border-radius: 15px;
	
	font-size: 1.2em;
	font-weight: bold;
	font-family: ehuSans;
}

.profile-logout {
	font-weight: bold;
	font-family: ehuSans;
}

.fullwidth {
	width: 100%;
}

.option-select {
	padding: 1em;
	border-radius: 5px;
	-moz-box-shadow: inset 0 0 10px #D8D8D8;
    -webkit-box-shadow: inset 0 0 10px #D8D8D8;
    box-shadow: inset 0 0 10px #D8D8D8;
	background: #FFF;
}

/* Large desktops and laptops */
@media (min-width: 1200px) {

}

/* Portrait tablets and medium desktops */
@media (min-width: 992px) and (max-width: 1199px) {

}

/* Portrait tablets and small desktops */
@media (min-width: 768px) and (max-width: 991px) {

}

/* Landscape phones and portrait tablets */
@media (max-width: 767px) {
	.exer { font-size: 1.5em; }
	.click { font-size: 1em; }
	#header { height: 2em; }
	#new-exercise { bottom: 5.5em; }
	.title {	font-size: 1em; }
	.exercise-tab { font-size: 100%; }
	.exercise-buttons-icons { font-size: 1em; }
	.left { float: none; }
	.exercise-buttons {	text-align: left; padding-bottom: 1em; }
}

/* Landscape phones and smaller */
@media (max-width: 480px) {
	.exer { font-size: 1.5em; }
	.click { font-size: 1em; }
	#header { font-size: 1.5em; line-height: 1.7em; height: 1.8em; }
	#new-exercise { bottom: 5.5em; }
	.title {	font-size: 1em; }
	.exercise-tab { font-size: 100%; }
	.exercise-buttons-icons { font-size: 1em; }
	.exercise-name-icons { display: none; }
	.left { float: none; }
	.exercise-buttons {	text-align: left; padding-bottom: 1em; }
	.statistics-percentage { display: none; }
}

@media only screen and (max-width: 320px) {
	.exer { font-size: 1.5em; }
	.click { font-size: 1em; }
	#main { margin-top: -1px; }
	#header { font-size: 1.5em; line-height: 1.7em; height: 1.8em; }
	#new-exercise { bottom: 5.5em; }
	.title {	font-size: 1em; }
	.exercise-tab { font-size: 100%; }
	.exercise-buttons-icons { font-size: 1em; }
	.tab-title  { font-size: 0.5em; }
	.left { float: none; }
	.exercise-buttons {	text-align: left; padding-bottom: 1em; }
	.statistics-percentage { display: none; }
	.statistics-button-data { display: none; }
}

@media (max-height: 400px) {
	#container { margin-bottom: -2.5em; }
	#overfooter { border-bottom: 0px; border: 1px groove #A4A4A4; }
	#footer { display: none; height: 0px; }
	#statistics { bottom: 2.5em; }
	#statistics-buttons { display: none; height: 0px; }
}

@media (max-height: 500px) {
	#statistics-buttons { display: none; height: 0px; }
}

